succeed to run spark-hadoop